--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-toggle": "^1.1.2",
+    "@react-pdf/renderer": "^4.3.0",
     "@types/bcrypt": "^5.0.2",
     "@types/uuid": "^10.0.0",
     "@zxing/browser": "^0.1.5",
