--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@radix-ui/react-toggle": "^1.1.2",
     "@react-pdf/renderer": "^4.3.0",
     "@types/uuid": "^10.0.0",
+    "axios": "^1.8.3",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
@@ -47,6 +48,8 @@
     "react-dom": "^19.0.0",
     "react-hotkeys-hook": "^4.6.1",
     "resend": "^4.1.2",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
