feat: Add skeleton loading states to all reports pages
- reports/sales: TableSkeleton + Skeleton for button
- reports/purchases: TableSkeleton
- reports/adjustments: TableSkeleton + Skeleton
- reports/inventory: 2x TableSkeleton
- reports/debt: PageSkeleton
- reports/supplier-debt: PageSkeleton
- reports/financial: PageSkeleton

🤖 Generated with OpenClaw

--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "next build --no-lint",
     "start": "next start",
     "test": "jest",
+    "type-check": "tsc --noEmit",
+    "validate": "npm run lint && npm run type-check",
     "lint": "next lint",
     "postinstall": "prisma generate",
     "db:seed": "npx prisma db seed",
