feat: Implement offline support and PWA capabilities with service worker, manifest, and offline-first data synchronization.

--- a/package.json
+++ b/package.json
@@ -39,7 +39,11 @@
     "@radix-ui/react-toggle": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@react-pdf/renderer": "^4.3.0",
+    "@serwist/next": "^9.5.3",
+    "@serwist/precaching": "^9.5.3",
+    "@serwist/sw": "^9.5.3",
     "@tanstack/react-query": "^5.90.16",
+    "@tanstack/react-query-persist-client": "^5.90.22",
     "@tanstack/react-table": "^8.21.3",
     "@types/recharts": "^1.8.29",
     "@types/uuid": "^10.0.0",
@@ -49,6 +53,7 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^12.5.0",
     "fuse.js": "^7.1.0",
+    "idb-keyval": "^6.2.2",
     "lucide-react": "^0.479.0",
     "next": "15.2.8",
     "next-auth": "^5.0.0-beta.25",
@@ -88,6 +93,7 @@
     "jest-mock-extended": "^4.0.0",
     "node-mocks-http": "^1.17.2",
     "prisma": "^7.2.0",
+    "serwist": "^9.5.3",
     "supertest": "^7.1.4",
     "tailwindcss": "^4",
     "ts-jest": "^29.4.6",
