--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "ts-node --compiler-options '{\"module\":\"CommonJS\"}' scripts/dev-with-cron.ts",
+    "dev:simple": "next dev",
     "build": "next build --no-lint",
     "start": "next start",
     "test": "jest",
